updated file names

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banana Talk</title>
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     
@@ -29,7 +29,7 @@
 
         <div class="minion-text-output-container" >
 
-            <textarea id="output" cols="65" rows="3.5" ></textarea>
+            <textarea id="output" cols="65" rows="3.5"></textarea>
 
         </div>
         
@@ -42,6 +42,6 @@
         <p class="footer-text" >Are you a fan of minions? Did you know that the gibberish they say is an actual language. Use the translator to convert your text from English to Minion speak or Banana language.</p>
 
     </footer>
-    <script src="../js/index.js"></script>
+    <script src="./app.js"></script>
 </body>
 </html>
